# registries

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  alembic.ini  ref
.aiassistant/rules/: 20-repo-governance-and-ci.md  30-backend-platform.md  31-backend-apps-and-product-model.md
.gitea/workflows/: ci.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
docker/: Dockerfile
docker/entrypoints/: backend.sh
docker/runs/: backend.sh
docs/: getting-started.md  index.md  overview.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/adr/: INDEX.md  README.md
docs/adr/architecture/: 0000-record-architecture-decisions.md  0001-monorepo-and-bounded-contexts.md  0002-api-first-and-contract-versioning.md  0003-event-driven-internal-integration.md  0004-observability-and-audit-trail.md  0005-background-jobs-and-workflow-orchestration.md  0006-authn-authz-and-machine-identities.md  0007-configuration-and-policy-as-code.md  0008-layered-testing-strategy.md  0009-deployment-topology-and-runtime-model.md  0010-use-taskiq-redis-streams-and-postgresql.md  0011-manage-postgresql-schema-with-alembic.md  0012-define-repository-layout-and-file-placement-rules.md  0013-adopt-a-flat-backend-service-root-and-bounded-context-layout.md  0014-enforce-backend-dependency-direction-and-import-boundaries.md  0015-enforce-template-quality-gates-and-governance-baseline.md  0016-support-github-and-gitea-ci-for-template-repositories.md  0017-standardize-backend-testing-on-pytest-testcontainers-and-full-request-flows.md  0018-enforce-typed-contracts-and-unit-of-work-owned-persistence.md  0019-centralize-persistence-behind-repositories-query-services-and-exhaustive-layer-contracts.md  0020-centralize-platform-error-registry-and-http-error-projection.md  README.md  (+4 more)
docs/adr/engineering/: README.md  (+1 more)
migrations/: env.py
scripts/: check_adrs.py  check_backend_architecture.py  check_backend_observability.py  check_frontend_architecture.py  check_http_contract_parity.py  check_repo_structure.py  check_specs.py  check_template_consistency.py  generate_frontend_openapi_client.py  run_backend_bandit.py  run_backend_deptry.py  run_backend_eradicate.py  run_backend_import_boundaries.py  run_backend_lint.py  run_backend_lint_fix.py  run_backend_pip_audit.sh  run_backend_pyupgrade.py  run_backend_sync.py  run_backend_tests.py  run_backend_tryceratops.py  run_backend_types.py  run_backend_xenon.py  run_contract_tests.py  run_docker_builds.sh  run_docs_build.py  run_docs_install.py  run_e2e_tests.py  run_frontend_build.py  run_frontend_install.py  run_frontend_lint.py  run_frontend_lint_fix.py  run_frontend_tests.py  run_frontend_types.py  run_hadolint.sh  run_shellcheck.sh  run_trivy_fs.sh
specs/: README.md
specs/asyncapi/: README.md
specs/jsonschema/: README.md
specs/openapi/: README.md  platform.openapi.yaml
src/backend/: .gitignore  main.py  pyproject.toml
src/backend/api/: router.py
src/backend/apps/: __init__.py
src/backend/apps/system/: __init__.py
src/backend/apps/system/api/: __init__.py  deps.py  errors.py  read_endpoints.py  router.py
src/backend/apps/system/application/: __init__.py  services.py
src/backend/apps/system/contracts/: __init__.py  health.py  meta.py
src/backend/apps/system/domain/: __init__.py  ports.py
src/backend/apps/system/infrastructure/: __init__.py  repositories.py
src/backend/core/: __init__.py
src/backend/core/bootstrap/: __init__.py  app.py  system.py
src/backend/core/db/: __init__.py  persistence.py  session.py  uow.py
src/backend/core/errors/: __init__.py  catalog.py  exceptions.py  registry.py  taxonomy.py
src/backend/core/http/: __init__.py  errors.py  handlers.py
src/backend/core/observability/: __init__.py  context.py  error_tracking.py  logging.py  metrics.py  middleware.py  setup.py  tracing.py
src/backend/core/settings/: __init__.py  base.py
src/backend/runtime/: __init__.py
src/backend/runtime/orchestration/: __init__.py  broker.py
src/backend/runtime/streams/: __init__.py
src/backend/tests/: conftest.py  helpers.py  test_main.py
src/backend/tests/apps/system/: test_api_errors.py  test_health_api.py
src/backend/tests/core/: test_bootstrap_app.py  test_db_units.py  test_http_error_factories.py  test_http_errors.py  test_observability.py  test_observability_error_tracking.py  test_observability_logging.py  test_observability_runtime.py  test_settings_units.py
src/backend/tests/runtime/: test_broker.py
src/frontend/: .gitignore  App.vue  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite-env.d.ts  vite.config.ts
tests/: conftest.py
tests/contract/: test_system_health_contract.py
tests/e2e/: test_reference_slice_smoke.py
(+20 files in other folders)
